--- a/enviroment/manifest/frontend-deployment.yaml
+++ b/enviroment/manifest/frontend-deployment.yaml
@@ -1,26 +1,34 @@
-frontend_repo=$(aws ecr describe-repositories --repository-names frontend --query 'repositories[0].repositoryUri' --output text)
-cat <<EOF > frontend-deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      app: frontend
-  replicas: 2
+      app: php-app
   template:
     metadata:
       labels:
-        app: frontend
+        app: php-app
     spec:
       containers:
-      - name: frontend
-        image: ${frontend_repo}:latest
+      - name: my-php-app
+        image: 075895093411.dkr.ecr.us-east-1.amazonaws.com/helloworld:latest
         imagePullPolicy: Always
         ports:
-        - containerPort: 5000
-        env:
-        - name: BACKEND_URL
-          value: http://backend.backend:5000/messages
-EOF
+        - containerPort: 8085
+# service type loadbalancer
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: php-app-svc
+spec:
+  selector:
+    app: php-app
+  ports:
+    - protocol: TCP
+      port: 8085
+      targetPort: 8085
+  type: LoadBalancer
